--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -1,5 +1,9 @@
 - clean: ['~']
 
+- shell:
+    [git clone git@github.com:gpakosz/.tmux.git ~/.tmux, "Installing tmux config"]
+    [git clone https://github.com/NvChad/NvChad ~/.config/nvim --depth 1, "Installing NvChad"]
+
 - link:
     ~/.profile: profile
     ~/.ssh/config:
@@ -7,5 +11,8 @@
         create: true
     ~/.zprofile: zprofile
     ~/.zshenv: zshenv
-
+    ~/.tmux/.tmux.conf.local: tmux.conf.local
+    ~/.zshrc: zshrc
+    ~/.config/nvim/lua/custom: nvchad-conf
+    ~/.gitconfig: gitconfig
 
