--- a/tmux.conf
+++ b/tmux.conf
@@ -21,6 +21,8 @@ bind r source-file ~/.tmux.conf \; display '~/.tmux.conf sourced'
 
 # -- display -------------------------------------------------------------------
 
+set-window-option -g status-left " #S "
+
 set -g base-index 1           # start windows numbering at 1
 setw -g pane-base-index 1     # make pane numbering consistent with windows
 
@@ -79,21 +81,6 @@ bind -r C-h previous-window # select previous window
 bind -r C-l next-window     # select next window
 bind Tab last-window        # move to last active window
 
-# toggle mouse
-bind m run "cut -c3- ~/.tmux.conf | sh -s _toggle_mouse"
-
-
-# -- urlview -------------------------------------------------------------------
-
-bind U run "cut -c3- ~/.tmux.conf | sh -s _urlview #{pane_id}"
-
-
-# -- facebook pathpicker -------------------------------------------------------
-
-bind F run "cut -c3- ~/.tmux.conf | sh -s _fpp #{pane_id}"
-
-
-# -- list choice (tmux < 2.4) --------------------------------------------------
 
 # vi-choice is gone in tmux >= 2.4
 run -b 'tmux bind -t vi-choice h tree-collapse 2> /dev/null || true'
@@ -142,15 +129,6 @@ if -b 'command -v clip.exe > /dev/null 2>&1' 'bind y run -b "tmux save-buffer - 
 if -b '[ -c /dev/clipboard ]' 'bind y run -b "tmux save-buffer - > /dev/clipboard"'
 
 
-# -- buffers -------------------------------------------------------------------
-
-bind b list-buffers  # list paste buffers
-bind p paste-buffer  # paste from the top paste buffer
-bind P choose-buffer # choose which buffer to paste from
-
-
-# -- user defined overrides ----------------------------------------------------
-
 unbind C-w
 
 set -g @plugin 'tmux-plugins/tpm'
@@ -162,14 +140,9 @@ run '~/.tmux/plugins/dracula/dracula.tmux'
 
 run '~/.tmux/plugins/tpm/tpm'
 
-set -g @dracula-show-left-icon
 set -g @dracula-show-powerline true
 set -g @dracula-show-fahrenheit false
-set -g @dracula-fixed-location "Tel Aviv, Israel"
-# set -g @dracula-plugins "weather"
-# set -g @dracula-show-flags true
-# set -g @dracula-show-left-icon session
-#
+set -g @dracula-fixed-location "Tel Aviv"
 
 set -g prefix C-s
 
@@ -213,5 +186,7 @@ bind-key -T copy-mode-vi 'C-\' select-pane -l
 set -g status-keys vi
 setw -g mode-keys vi
 
+# Project shortcuts
 bind-key -r D run-shell "~/.dotfiles/tmux-sessionizer ~/.dotfiles"
 bind-key -r W run-shell "~/.dotfiles/tmux-sessionizer ~/projects/wekapp/"
+bind-key -r G run-shell "~/.dotfiles/tmux-sessionizer ~/projects/grape.nvim"
