Changes from pelanor

--- a/tmux.conf
+++ b/tmux.conf
@@ -13,7 +13,7 @@ setw -q -g utf8 on
 set -g history-limit 10000                 # boost history
 
 # edit configuration
-bind e new-window -n "~/.tmux.conf.local" "EDITOR=\${EDITOR//mvim/vim} && EDITOR=\${EDITOR//gvim/vim} && \${EDITOR:-vim} ~/.tmux.conf.local && tmux source ~/.tmux.conf && tmux display \"~/.tmux.conf sourced\""
+bind e new-window -n "~/.tmux.conf" "EDITOR=\${EDITOR//mvim/vim} && EDITOR=\${EDITOR//gvim/vim} && \${EDITOR:-vim} ~/.tmux.conf && tmux source ~/.tmux.conf && tmux display \"~/.tmux.conf sourced\""
 
 # reload configuration
 bind r source-file ~/.tmux.conf \; display '~/.tmux.conf sourced'
@@ -155,7 +155,7 @@ bind -n M-L next-window
 
 
 # forget the find window.  That is for chumps
-bind-key p run-shell "tmux neww ~/utils/tmux-sessionizer"
+bind-key p run-shell "tmux neww ~/.dotfiles/tmux-sessionizer"
 
 bind-key -r & kill-window
 bind-key -r x kill-pane
@@ -188,5 +188,4 @@ setw -g mode-keys vi
 
 # Project shortcuts
 bind-key -r D run-shell "~/.dotfiles/tmux-sessionizer ~/.dotfiles"
-bind-key -r W run-shell "~/.dotfiles/tmux-sessionizer ~/projects/wekapp/"
-bind-key -r G run-shell "~/.dotfiles/tmux-sessionizer ~/projects/grape.nvim"
+bind-key -r P run-shell "~/.dotfiles/tmux-sessionizer ~/work/pelanor/"
