--- a/tmux.conf
+++ b/tmux.conf
@@ -74,6 +74,8 @@ bind -r J resize-pane -D 2
 bind -r K resize-pane -U 2
 bind -r L resize-pane -R 2
 
+bind-key j command-prompt -p "join pane to: "  "join-pane -h -t '%%'"
+
 # window navigation
 unbind n
 unbind p
