Uses smart-splits for pane navigation and resizing

--- a/tmux.conf
+++ b/tmux.conf
@@ -68,12 +68,6 @@ bind < swap-pane -U       # swap current pane with the previous one
 # maximize current pane
 bind + run 'cut -c3- ~/.tmux.conf | sh -s _maximize_pane "#{session_name}" #D'
 
-# pane resizing
-bind -r H resize-pane -L 2
-bind -r J resize-pane -D 2
-bind -r K resize-pane -U 2
-bind -r L resize-pane -R 2
-
 bind-key j command-prompt -p "join pane to: "  "join-pane -h -t '%%'"
 
 # window navigation
@@ -164,6 +158,13 @@ bind-key -r x kill-pane
 
 bind-key / copy-mode \; send-key ?
 
+
+# pane resizing
+# bind -r H resize-pane -L 2
+# bind -r J resize-pane -D 2
+# bind -r K resize-pane -U 2
+# bind -r L resize-pane -R 2
+
 # Smart pane switching with awareness of Vim splits.
 # See: https://github.com/christoomey/vim-tmux-navigator
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
@@ -172,6 +173,11 @@ bind-key -n C-h if-shell "$is_vim" 'send-keys C-h'  'select-pane -L'
 bind-key -n C-j if-shell "$is_vim" 'send-keys C-j'  'select-pane -D'
 bind-key -n C-k if-shell "$is_vim" 'send-keys C-k'  'select-pane -U'
 bind-key -n C-l if-shell "$is_vim" 'send-keys C-l'  'select-pane -R'
+
+bind-key -n M-h if-shell "$is_vim" 'send-keys M-h' 'resize-pane -L 3'
+bind-key -n M-j if-shell "$is_vim" 'send-keys M-j' 'resize-pane -D 3'
+bind-key -n M-k if-shell "$is_vim" 'send-keys M-k' 'resize-pane -U 3'
+bind-key -n M-l if-shell "$is_vim" 'send-keys M-l' 'resize-pane -R 3'
 
 tmux_version='$(tmux -V | sed -En "s/^tmux ([0-9]+(.[0-9]+)?).*/\1/p")'
 if-shell -b '[ "$(echo "$tmux_version < 3.0" | bc)" = 1 ]' \
