--- a/tmux.conf
+++ b/tmux.conf
@@ -197,3 +197,4 @@ setw -g mode-keys vi
 # Project shortcuts
 bind-key -r D run-shell "~/.dotfiles/tmux-sessionizer ~/.dotfiles"
 bind-key -r P run-shell "~/.dotfiles/tmux-sessionizer ~/work/pelanor/"
+bind-key -r O run-shell "~/.dotfiles/tmux-sessionizer ~/work/pelanor2/"
