trying to move to using ghostty as neovim terminal

--- a/tmux.conf
+++ b/tmux.conf
@@ -149,6 +149,7 @@ set -g prefix C-s
 bind -n M-H previous-window
 bind -n M-L next-window
 
+bind-key g popup -w90% -h90% -E "lazygit"
 
 # forget the find window.  That is for chumps
 bind-key p run-shell "tmux neww ~/.dotfiles/tmux-sessionizer"
