upgrade to harpoon2

--- a/tmux.conf
+++ b/tmux.conf
@@ -140,7 +140,7 @@ set -g @dracula-show-powerline true
 set -g @dracula-show-fahrenheit false
 set -g @dracula-fixed-location "Tel Aviv"
 
-set -g prefix C-q
+set -g prefix C-s
 
 # -- user customizations -------------------------------------------------------
 # this is the place to override or undo settings
