--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -44,6 +44,9 @@ font_size 14.0
 # adjust_line_height  0
 adjust_column_width 92%
 
+cursor_trail 3
+cursor_trail_decay 0.1 0.4
+
 #: Change the size of each character cell kitty renders. You can use
 #: either numbers, which are interpreted as pixels or percentages
 #: (number followed by %), which are interpreted as percentages of the
