--- a/tmux.conf
+++ b/tmux.conf
@@ -197,5 +197,5 @@ setw -g mode-keys vi
 
 # Project shortcuts
 bind-key -r D run-shell "~/.dotfiles/tmux-sessionizer ~/.dotfiles"
-bind-key -r P run-shell "~/.dotfiles/tmux-sessionizer ~/work/pelanor/"
+bind-key -r P run-shell "~/.dotfiles/tmux-sessionizer ~/work/pelanor1/"
 bind-key -r O run-shell "~/.dotfiles/tmux-sessionizer ~/work/pelanor2/"
