--- a/tmux.conf
+++ b/tmux.conf
@@ -153,6 +153,7 @@ bind-key g popup -w90% -h90% -E "lazygit"
 
 # forget the find window.  That is for chumps
 bind-key p run-shell "tmux neww ~/.dotfiles/tmux-sessionizer"
+bind-key o run-shell "tmux neww ~/.dotfiles/tmux-workspace-selector.sh"
 
 bind-key -r & kill-window
 bind-key -r x kill-pane
