--- a/tmux.conf
+++ b/tmux.conf
@@ -1,4 +1,11 @@
-set -g default-terminal "screen-256color" # colors!
+set -g default-terminal "tmux-256color" # colors!
+# Comprehensive terminal overrides for true color support
+set -ag terminal-overrides ",xterm-256color:RGB:Tc"
+set -ag terminal-overrides ",xterm-kitty:RGB:Tc"
+set -ag terminal-overrides ",screen-256color:RGB:Tc"
+set -ag terminal-overrides ",tmux-256color:RGB:Tc"
+# Ensure true color support for all terminals
+set -ga terminal-overrides "*:Tc"
 setw -g xterm-keys on
 set -s escape-time 10                     # faster command sequences
 set -sg repeat-time 600                   # increase repeat timeout
