add kotlin support

--- a/tmux.conf
+++ b/tmux.conf
@@ -205,5 +205,4 @@ setw -g mode-keys vi
 
 # Project shortcuts
 bind-key -r D run-shell "~/.dotfiles/tmux-sessionizer ~/.dotfiles"
-bind-key -r P run-shell "~/.dotfiles/tmux-sessionizer ~/work/pelanor1/"
-bind-key -r O run-shell "~/.dotfiles/tmux-sessionizer ~/work/pelanor2/"
+bind-key -r B run-shell "~/.dotfiles/tmux-sessionizer ~/kela/blackberry-app/"
