--- a/tmux.conf
+++ b/tmux.conf
@@ -206,3 +206,4 @@ setw -g mode-keys vi
 # Project shortcuts
 bind-key -r D run-shell "~/.dotfiles/tmux-sessionizer ~/.dotfiles"
 bind-key -r B run-shell "~/.dotfiles/tmux-sessionizer ~/kela/blackberry-app/"
+bind-key -r S run-shell "~/.dotfiles/tmux-sessionizer ~/kela/synapse-playground/"
