--- a/tmux.conf
+++ b/tmux.conf
@@ -207,3 +207,5 @@ setw -g mode-keys vi
 bind-key -r D run-shell "~/.dotfiles/tmux-sessionizer ~/.dotfiles"
 bind-key -r B run-shell "~/.dotfiles/tmux-sessionizer ~/kela/blackberry-app/"
 bind-key -r S run-shell "~/.dotfiles/tmux-sessionizer ~/kela/synapse-playground/"
+bind-key -r P run-shell "~/.dotfiles/tmux-sessionizer ~/kela/patrol-planner/"
+bind-key -r O run-shell "~/.dotfiles/tmux-sessionizer ~/work/pelanor1/"
