--- a/tmux.conf
+++ b/tmux.conf
@@ -60,9 +60,9 @@ bind C-c new-session
 bind C-f command-prompt -p find-session 'switch-client -t %%'
 
 # split current window horizontally
-bind - split-window -v
+bind - split-window -v -c "#{pane_current_path}"
 # split current window vertically
-bind _ split-window -h
+bind _ split-window -h -c "#{pane_current_path}"
 
 # pane navigation
 bind -r h select-pane -L  # move left
@@ -205,7 +205,4 @@ setw -g mode-keys vi
 
 # Project shortcuts
 bind-key -r D run-shell "~/.dotfiles/tmux-sessionizer ~/.dotfiles"
-bind-key -r B run-shell "~/.dotfiles/tmux-sessionizer ~/kela/blackberry-app/"
-bind-key -r S run-shell "~/.dotfiles/tmux-sessionizer ~/kela/synapse-playground/"
-bind-key -r P run-shell "~/.dotfiles/tmux-sessionizer ~/kela/patrol-planner/"
-bind-key -r O run-shell "~/.dotfiles/tmux-sessionizer ~/work/pelanor1/"
+bind-key -r K run-shell "~/.dotfiles/tmux-sessionizer ~/kela/kela/"
